# graphics-programing

./: CMakeLists.txt  graphics.h  main.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp  note.txt  run.cpp  windows.h
2D/: readme.md
2D/Demo y/:  keyboard and mouse2.cpp  3d fan.cpp  3s shape.cpp  Bresenham.cpp  Line drawing.cpp  mouse keyboard.cpp  o_circle algorithm.cpp
2D/Task1/: 0.cpp  1.cpp  2.cpp  3.cpp  4.cpp
2D/Task2/: bai1.cpp  demo.cpp
Start/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp
